tests/blackbox_tests/desktop-entry-syntax-error-1.desktop
# E: syntax-error-in-desktop-entry invalid group name 'Desktop[Entry' line 3

[Desktop[Entry]
Type = Application
Name = Gizmo Enhancer
